2004-11-18  Mark D. Baushke  <mdb@cvshome.org>

	* checkout.c (checkout_proc): Passing the repository to
	tag_check_valid seems to stop the assertion failure in recurse.c
	do_recursion.
	* sanity.sh (basic2-21a): Removed.
	(basic2-21b): Fixed.

2004-11-17  Mark D. Baushke  <mdb@cvshome.org>

	* sanity.sh (basic2-21a): The val-tags file should have
	at least 'rtagged-by-head y' in it.
	(basic2-21b): New test showing a cvs bug when val-tags
	is not properly updated.
	(Report from "John Elgin" <John@JCElgin.com>.)

2004-11-17  Mark D. Baushke  <mdb@cvshome.org>

	* client.c (handle_m, handle_e): Winsock is returning
	SOCK_ERRNO == WSAENOTSOCK for select() problems and not
	setting errno. Do not bother with printing an error from a
	select() that is not returning an non-zero errno.
	(Report from Conrad T. Pino <Conrad@Pino.com>.)

2004-11-10 Derek Price <derek@ximbiot.com>

	* sanity.sh: Maintain pass/skip/warn status and output at end.
	(usage): Note new functionality of -e.
	(warn): New function.
	(verify_tmp_empty): Warn instead of failing.  Delete turds if warn()
	doesn't exit.

2004-11-10 Derek Price <derek@ximbiot.com>

	* sanity.sh (verify_tmp_empty): New function.
	(dotest_internal_*): Call verify_tmp_empty as needed.

2004-11-09  Mark D. Baushke  <mdb@cvshome.org>

	* sanity.sh: Backport find_tool changes from 1.12.9.1.
	(SEARCHPATH): New list of PATH directories to search.
	(Which): Use $SEARCHPATH. Support -a switch.
	(badtools,set_bad_tool,is_bad_tool): Keep track of tools that do
	not work for us.
	(version_test): Obtain the version of tools under test if
	possible.
	(tool_find): Rewrite. API changed to allow a list of
	tests to be used against a list of possible command names found on
	the SEARCHPATH.
	(id_tool_test): Check that 'id -u' and 'id -un' work.
	(expr_tooltest1): Check for NextStep 3.3 expr bug.
	(expr_tooltest2): Check for SunOS expr multi-line pattern bug.
	(expr_create_bar): Create a test file for expr testing.